objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AW_DefaultOpportunityProcess</fullName>
        <description>Liberty Default Opportunity Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Business Accepted</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Perform FNA</fullName>
        </values>
        <values>
            <fullName>Propose Solution</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Solution Accepted</fullName>
        </values>
        <values>
            <fullName>Submit Business</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Due Diligence</fullName>
        <description>STANLIB Asset Management Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Invitation %2F Request Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Presentation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Develop Proposal</fullName>
        </values>
        <values>
            <fullName>Initiate Transfer</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Presentation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Develop Proposal</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Initiate Transfer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RFP  Tender Quote</fullName>
        <description>STANLIB Asset Management Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Client Presentation</fullName>
        </values>
        <values>
            <fullName>Close Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Due Diligence</fullName>
        </values>
        <values>
            <fullName>Expression of Interest</fullName>
        </values>
        <values>
            <fullName>Invitation %2F Request Received</fullName>
        </values>
        <values>
            <fullName>Negotiations Complete</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STANLIB New Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Opening</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Document Preparation</fullName>
        </values>
        <values>
            <fullName>FICA Approval</fullName>
        </values>
        <values>
            <fullName>Funds Received</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AW_AdviserUACFID__c</fullName>
        <description>UACFID of Adviser</description>
        <formula>UPPER(Owner.AW_UACFID__c)</formula>
        <label>Adviser UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ClosedDate__c</fullName>
        <description>This closed field  date/time format is created to calculate the conversion time .</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_CommentsNotes__c</fullName>
        <description>Used by advisers to store additional information</description>
        <label>Comments/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AW_ConversionTime__c</fullName>
        <description>Conversion Time Calculated</description>
        <formula>ROUND( 9 * (
   ( 5 * FLOOR( ( DATEVALUE(AW_ClosedDate__c)  - DATE( 1900, 1, 8) ) / 7) +
    MIN(5,
     MOD(  DATEVALUE(AW_ClosedDate__c)  - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( AW_ClosedDate__c - DATETIMEVALUE( &apos;1900-01-08 6:00:00&apos; ), 1 ) ) )
    )
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 6:00:00&apos; ), 1) ) )
    )
   )
  ),
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FromStage__c</fullName>
        <description>The From Stage indicator</description>
        <label>From Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_HoursInCurrentStatus__c</fullName>
        <description>Used to calculate the number of business hours which have elapsed since the opp status last changed. 
Business Hours: 8:00 - 17:00</description>
        <formula>ROUND( 9 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 06:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( AW_LastStatusChange__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( AW_LastStatusChange__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( AW_LastStatusChange__c - DATETIMEVALUE( &apos;1900-01-08 06:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours in current status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_IdleStageIndicator__c</fullName>
        <description>Displays a positive, neutral or negative indicator based on the time elapsed since the opportunity moved to the current status.</description>
        <formula>IF(IsClosed, 
	&quot;Closed&quot;,
	IF
	( 
		AW_HoursInCurrentStatus__c &lt;= AW_OpportunityStagePositiveSetting__c, 
		IMAGE(&quot;/resource/1560429216000/Idle_Indicator_Positive&quot;, &quot;positive&quot;, 15, 30),
		IF
		( 
			AW_HoursInCurrentStatus__c &gt;=  AW_OpportunityStageNegativeSetting__c,
			IMAGE(&quot;/resource/1560429428000/Idle_Indicator_Negative&quot;, &quot;negative&quot;, 15, 30),
			IMAGE(&quot;/resource/1560429307000/Idle_Indicator_Neutral&quot;, &quot;neutral&quot;, 15, 30)
			
		)
	)
	&amp; &quot; &quot; &amp; TEXT(AW_HoursInCurrentStatus__c) &amp; &quot;h elapsed&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Idle Stage Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LastStatusChange__c</fullName>
        <description>Used to describe the status of the opportunity</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(Account.FinServ__Status__c , &apos;Active&apos;), NOT(ISNULL(Account.AW_ParentAccount__r.Id))),Account.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (MasterAccount)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityCreatedKey__c</fullName>
        <description>Key generated at the time an opportunity is created</description>
        <formula>IF
( 
	ISBLANK(Owner.AW_UACFID__c), 
	&apos;&apos;, 
	TEXT
	(
		FLOOR
		(
			( 
				DATEVALUE( CreatedDate ) - DATE(YEAR(DATEVALUE(CreatedDate)),1,1) 
				+WEEKDAY(DATE(YEAR(DATEVALUE(CreatedDate)),1,1))-2
			)/7 
		)+1
	)
	&amp; 
	TEXT(YEAR(DATEVALUE(CreatedDate)))
	&amp;   UPPER(Owner.AW_UACFID__c)   
)</formula>
        <label>Opportunity Created Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityScore__c</fullName>
        <description>This is the score of opportunity that&apos;s generated by Einstein. Please check this as I would think this is a standard field and not a custom field?</description>
        <label>Opportunity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityStageNegativeSetting__c</fullName>
        <description>Used to calculate negative sla setting for the current stage</description>
        <formula>CASE
(
    TEXT(StageName), 
    &quot;Qualify&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_Qualified.AW_Negative__c,
    &quot;Contacted&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_FNA_Performed.AW_Negative__c , 
    &quot;Engagement Scheduled&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_Quote_Accepted.AW_Negative__c,
    $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_Qualified.AW_Negative__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Negative Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityStagePositiveSetting__c</fullName>
        <description>Used to calculate positive sla setting for the current stage</description>
        <formula>CASE
(
    TEXT(StageName), 
    &quot;Qualify&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_Qualified.AW_Positive__c ,
    &quot;Contacted&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_FNA_Performed.AW_Positive__c , 
    &quot;Engagement Scheduled&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_Quote_Accepted.AW_Positive__c,
    $CustomMetadata.AW_StatusSLASetting__mdt.Opportunity_Stage_Qualified.AW_Positive__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Positive Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityType__c</fullName>
        <description>Select the opportunity type</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                    <default>true</default>
                    <label>New Business</label>
                </value>
                <value>
                    <fullName>Existing Book</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_OpportunityWonKey__c</fullName>
        <description>Key generated at the time an opportunity is won</description>
        <formula>IF
( 
	ISBLANK(Owner.AW_UACFID__c)|| ISBLANK(AW_ClosedDate__c), 
	&apos;&apos;, 
	TEXT
	(
		FLOOR
		(
			( 
				DATEVALUE( AW_ClosedDate__c ) - DATE(YEAR(DATEVALUE(AW_ClosedDate__c)),1,1) 
				+WEEKDAY(DATE(YEAR(DATEVALUE(AW_ClosedDate__c)),1,1))-2
			)/7 
		)+1
	)
	&amp; 
	TEXT(YEAR(DATEVALUE(AW_ClosedDate__c)))
	&amp;   UPPER(Owner.AW_UACFID__c)   
)</formula>
        <label>Opportunity Won Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Opportunity_Owner_Region__c</fullName>
        <description>Used for Achievement Dashboard for groupings of Opportunity Owner as per regions.</description>
        <formula>Owner.AW_Region__c</formula>
        <label>Opportunity Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(Account.Id)),Account.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PolicyNumber__c</fullName>
        <description>This field is used to store the  unique policy number, also known as the contract number, that is generated after a client has accepted a quote and moved on to the proposal (EP) phase.</description>
        <inlineHelpText>The Policy number also referred to as the contract number is the unique number used to identify a product.</inlineHelpText>
        <label>Policy number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductInterest__c</fullName>
        <description>Used to select the type of product/products the client is interested in, if specified</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_ProductInterest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_SubProductInterest__c</fullName>
        <description>Used to select product offering within Liberty</description>
        <label>Sub Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AW_ProductInterest__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>AW_SubProductInterest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ToStage__c</fullName>
        <description>The To Stage indicator</description>
        <label>To Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Opportunities</relationshipLabel>
        <relationshipName>HouseholdOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account or Contact that referred the lead</inlineHelpText>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>OpportunityContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_Age__c</fullName>
        <description>Is NOW() - Created Date to reveal age of Opportunity in days. Will only work for open opportunities.</description>
        <formula>IF(NOT(IsClosed), ROUND(NOW()-CreatedDate, 0), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_AppointmentEffective__c</fullName>
        <label>Appointment Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_CloseReason__c</fullName>
        <description>Reason for the opportunity being lost, won, cancelled</description>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Team experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_Competitor_Product__c</fullName>
        <label>Competitor Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLC_Competitor__c</fullName>
        <description>List of STANIB competitors to track on the specific Opportunity.</description>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>27Four Collective Investments</fullName>
                </value>
                <value>
                    <fullName>Absa</fullName>
                </value>
                <value>
                    <fullName>Allan Gray</fullName>
                </value>
                <value>
                    <fullName>Alusi</fullName>
                </value>
                <value>
                    <fullName>Aluwani</fullName>
                </value>
                <value>
                    <fullName>Ashburton</fullName>
                </value>
                <value>
                    <fullName>Boutique Collective Investments</fullName>
                </value>
                <value>
                    <fullName>Bridge Collective Investments</fullName>
                </value>
                <value>
                    <fullName>CI Collective Investments</fullName>
                </value>
                <value>
                    <fullName>Colourfield</fullName>
                </value>
                <value>
                    <fullName>Community Growth</fullName>
                </value>
                <value>
                    <fullName>Coreshares</fullName>
                </value>
                <value>
                    <fullName>Coronation</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Fairtree Am</fullName>
                </value>
                <value>
                    <fullName>Fedgroup</fullName>
                </value>
                <value>
                    <fullName>FNB CIS</fullName>
                </value>
                <value>
                    <fullName>Foord</fullName>
                </value>
                <value>
                    <fullName>Futuregrowth</fullName>
                </value>
                <value>
                    <fullName>Glacier</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>Gryphon Collective Investments</fullName>
                </value>
                <value>
                    <fullName>H4</fullName>
                </value>
                <value>
                    <fullName>Investment Solutions</fullName>
                </value>
                <value>
                    <fullName>IP Management Company</fullName>
                </value>
                <value>
                    <fullName>Itransact Fund Managers (Rf)(Pty) Ltd</fullName>
                </value>
                <value>
                    <fullName>Kagiso</fullName>
                </value>
                <value>
                    <fullName>Marriott</fullName>
                </value>
                <value>
                    <fullName>Momentum</fullName>
                </value>
                <value>
                    <fullName>Nedgroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Parent.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stanlib Consultant Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stanlib Institutional Person Account, Stanlib Retail Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Consultant)</relationshipLabel>
        <relationshipName>ConsultantOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_ConsultingFirm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consulting Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stanlib Consultant Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Consulting Firm)</relationshipLabel>
        <relationshipName>ConsultantFirmOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_CountryofIncorporation__c</fullName>
        <label>Country of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_DueDiligenceDate__c</fullName>
        <label>Due Diligence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_DueDiligenceFeedback__c</fullName>
        <label>Due Diligence Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLC_Fee_Amount__c</fullName>
        <formula>SLC_Fee_Percentage__c *  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLC_Fee_Percentage__c</fullName>
        <label>Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLC_Franchise__c</fullName>
        <label>Franchise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Credit Alternatives</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>IFA Broker Division</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Liberty Agency</fullName>
                </value>
                <value>
                    <fullName>Liberty Franchise</fullName>
                </value>
                <value>
                    <fullName>LISP</fullName>
                </value>
                <value>
                    <fullName>Listed Property</fullName>
                </value>
                <value>
                    <fullName>Multi Asset</fullName>
                </value>
                <value>
                    <fullName>Multi-Manager</fullName>
                </value>
                <value>
                    <fullName>Multi-Strategy</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Standard Bank Financial Consultant</fullName>
                </value>
                <value>
                    <fullName>Strategic Partners</fullName>
                </value>
                <value>
                    <fullName>Wholesale - Corporate</fullName>
                </value>
                <value>
                    <fullName>Wholesale - FOF</fullName>
                </value>
                <value>
                    <fullName>Wholesale - IFA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_InvestmentStrategy__c</fullName>
        <description>The overall STANLIB investment strategy that will govern the funds offered to STANLIB&apos;s clients.</description>
        <label>Investment Strategy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Credit Alternatives</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Index and Quantitative Investments</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Listed Property</fullName>
                </value>
                <value>
                    <fullName>Multi-Manager</fullName>
                </value>
                <value>
                    <fullName>Multi-Strategy</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_LegalVehicle__c</fullName>
        <label>Legal Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Segregated</fullName>
                </value>
                <value>
                    <fullName>Unit Trust</fullName>
                </value>
                <value>
                    <fullName>Unitised</fullName>
                    <isActive>false</isActive>
                    <label>Unitised</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_OpportunityHealth__c</fullName>
        <description>Users select the &apos;health&apos; of the Opportunity.</description>
        <label>Opportunity Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PresentationDate__c</fullName>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_ReasonLostWon__c</fullName>
        <label>Reason Lost or Won</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Team experience</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ResponseDueDate__c</fullName>
        <label>Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_ResponseSubmitted__c</fullName>
        <label>Response Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLI_FICAApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if FICA has responded and approved the FICA checklist document for Stanlib Institutional New Business</description>
        <inlineHelpText>Tick this field when the appropriate FICA checks have been approved</inlineHelpText>
        <label>FICA Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLI_MandateTypeProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to STANLIB Fund Product record type to represent Mandate for opportunity</description>
        <label>Mandate Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>STANLIB Fund</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>